# arcpp

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci-test.yml
docs/: annotated.html  classarcpp_1_1archive-members.html  classarcpp_1_1archive.html  classarcpp_1_1entry-members.html  classes.html  dir_02a92d2354b1005537e3eacf49bb85f9.html  doxygen.css  functions.html  index.html  iterator_8hpp_source.html
docs/html/: archive_8hpp_source.html  arcpp_8hpp_source.html  classarcpp_1_1entry.html  classarcpp_1_1iterator-members.html  classarcpp_1_1iterator.html  dir_d44c64559bbebec7f509842c48db8b23.html  entry_8hpp_source.html  files.html  functions_enum.html  functions_func.html  index.html
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_9.js  searchdata.js
docs/search/: all_0.js  all_2.js  all_6.js  all_8.js  all_a.js  all_b.js  classes_1.js  classes_2.js  enums_0.js  functions_4.js  functions_6.js  functions_8.js  pages_0.js  search.css
include/arcpp/: archive.hpp  arcpp.hpp  entry.hpp  iterator.hpp
src/arcpp/: archive.cpp  entry.cpp  iterator.cpp
test/: CMakeLists.txt  iterator.cpp  opening.cpp  reading.cpp  test.7z  test.iso  test.rar  test.tar
test/files/: file1.txt
test/files/folder/: file2.txt
